feat: 更新训练配置、损失函数及聚合脚本

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,26 +1,29 @@
 data:
   root: "data/native/train/1"
-  # 🎯 Z-Axis Alignment (CRITICAL)
-  # Files 34-47 are MISSING. Available files with ink: 51-64
-  # We strictly exclude any other layers to avoid domain shift or missing file errors.
-  z_slices: [51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64]
+  # 🎯 Z-Axis Targeting Reset
+  # User Audit: Z=58 is noise. Z=41 is signal.
+  # Range: 33 to 48 (16 slices centered approx around 41)
+  z_slices: [33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48]
   
   # Surgical Windowing
   window_min: 18000.0
   window_max: 28000.0
   
   # Validation Split (Spatial)
-  # We take the bottom 20% of the scroll for validation to prevent leakage.
+  # Bottom 20%
   valid_split_fraction: 0.2
 
 training:
-  experiment_name: "vesuvius_surgical_refactor"
+  experiment_name: "vesuvius_z41_focal_refactor"
   batch_size: 16
   epochs: 20
   lr: 0.001
   accumulate_steps: 1
-  num_workers: 0 # Windows safe default
+  num_workers: 0 
+  
+  # Loss Config
+  loss: "HallucinationKillerLoss" # Anti-Hallucination Standard
 
 model:
   encoder: "resnet18"
-  in_channels: 14 # Must match z_slices length
+  in_channels: 16 # Matches new z_slices length
